--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,7 +4,6 @@ on:
   push:
     branches:
       - main
-      - master
   schedule:
     # rebuild everyday at 2:51
     # TIP: Choose a random time here so not all repositories are build at once:
@@ -20,7 +19,7 @@ jobs:
         # The repo name as used in
         # https://github.com/nix-community/NUR/blob/master/repos.json
         nurRepo:
-          - <YOUR_REPO_NAME>
+          - ryan4yin
         # Set this to cache your build results in cachix for faster builds
         # in CI and for everyone who uses your cache.
         #
@@ -30,9 +29,9 @@ jobs:
         # For this to work, you also need to set the CACHIX_SIGNING_KEY or
         # CACHIX_AUTH_TOKEN secret in your repository secrets settings in
         # Github found at
-        # https://github.com/<your_githubname>/nur-packages/settings/secrets
+        # https://github.com/ryan4yin/nur-packages/settings/secrets
         cachixName:
-          - <YOUR_CACHIX_NAME>
+          - ryan4yin
         nixPath:
           - nixpkgs=channel:nixos-unstable
           - nixpkgs=channel:nixpkgs-unstable
